# coupled-heat-solver

./: CMakeLists.txt  README.md  precice-config.xml
src/: main.cpp
